--- a/PW Assignments/Python/Web & Image Scrapper/Web Scrapping.ipynb
+++ b/PW Assignments/Python/Web & Image Scrapper/Web Scrapping.ipynb
@@ -78,6 +78,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q5. Write the names of AWS services used in this project. Also, explain the use of each service."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- EC2 (Elastic Compute Cloud): Running the web scraping scripts and Flask application on virtual servers.\n",
+    "Scaling up or down computing resources as needed based on scraping workload.\n",
+    "- S3 (Simple Storage Service): Storing scraped data (product reviews, ratings, etc.) in a scalable and durable object storage.\n",
+    "Facilitating data analysis or integration with other applications.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
